# libusb4java

./: CMakeLists.txt  build.gradle
src/: usb4java.h
src/main/: AndroidManifest.xml
